# mads_booming_babies_capstone

./: .gitignore  README.md  download_files.ipynb  eda.ipynb  expanding_scaler.py  mypy.ini  pyproject.toml  sample_explore.ipynb  var_name_map_cat.json  var_name_map_one_hot copy.json
archive/: FINAL_maternal_morbidity_demographics_shap_analysis.ipynb
controllable_factors_modeling/: TLFigs.ipynb  controllable_factors_modeling.ipynb  recall_optimized_modeling.ipynb
dag_generation/: causal_dags.ipynb  causal_dags_pytetrad_1.ipynb  causal_dags_pytetrad_2.ipynb  causal_dags_pytetrad_3.ipynb  final_dag_generation.ipynb  prep_data_for_dag_1.ipynb  prep_data_for_dag_2.ipynb  prep_data_for_dag_3.ipynb
dag_generation/pdf_dags/: pdf_reasoning.txt
dag_side_quest/: causal_dags.ipynb  causal_dags_pytetrad_1.ipynb  causal_dags_pytetrad_2.ipynb  causal_dags_pytetrad_3.ipynb  prep_data_for_dag_1.ipynb  prep_data_for_dag_2.ipynb  prep_data_for_dag_3.ipynb
data_collection/: download_dataset_samples.py  download_files.ipynb  generate_10pct_sample_data.ipynb  generate_natality_7yr_test_data.ipynb
demographic_factors_modeling/: demographic_factors_modeling.ipynb
recall_modeling/: prep_data_for_recall_modeling.ipynb  recall_optimized_modeling.ipynb
recall_optimized_modeling/: prep_data_for_recall_modeling.ipynb  recall_modeling_visualization.ipynb  recall_optimized_modeling.ipynb
variable_selection/: prep_data_for_feature_select.ipynb  prep_data_for_variable_select.ipynb  var_name_map_optimizer.json  variable_selection_visualization.ipynb
