[project]
name = "capstone"
version = "0.1.0"
description = "Booming Babies Capstone"
authors = [
    { name = "Jacob Perius", email = "jperius@umich.edu" },
    { name = "Thomas Lucas", email = "tlucas@umich.edu" },
    { name = "Sean Sedique", email = "sedique@umich.edu" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.3,<3.0)",
    "scipy (>=1.15,<1.16)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "holoviews (>=1.21.0,<2.0.0)",
    "jpype1 (>=1.6.0,<2.0.0)",
    "py-tetrad @ git+https://github.com/cmu-phil/py-tetrad",
    "graphviz (>=0.21,<0.22)",
    "xgboost (>=3.1.2,<4.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "imblearn (>=0.0,<0.1)",
    "google-cloud-storage (>=3.6.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
